[tool.poetry]
name = "tokscope"
version = "0.0.1"
description = ""
authors = ["rzhangtech@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.2"
matplotlib = "<3.9.2"
scipy = "^1.14.1"
transformers = "^4.46.3"
markupsafe = "^3.0.2"
scikit-learn = "^1.6.1"
torch = "^2.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
